[package]
name = "bink"
version = "0.1.0"
edition = "2021"
description = "Reserved name"
license = "MIT"
repository = "https://github.com/jacobtread/bink"
authors = ["Jacobtread <jacobtread@gmail.com>"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
